--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-  <div id='app'>
+  <div id='Reservations'>
   </div>
 
+  <script src="//unpkg.com/styled-components/dist/styled-components.min.js"></script>
   <script src = "./bundle.js" type = "module"></script>
 </body>
 
