--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
 <body>
   <div id='Reservations'>
   </div>
-
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="//unpkg.com/styled-components/dist/styled-components.min.js"></script>
-  <script src = "./bundle.js" type = "module"></script>
+  <script src = "./bundle.js"></script>
 </body>
 
 </html>
